--- a/TARge21Shop/TARge21Shop/Views/OpenWeathers/City.cshtml
+++ b/TARge21Shop/TARge21Shop/Views/OpenWeathers/City.cshtml
@@ -2,8 +2,6 @@
 
 <h1>City</h1>
 
-    }
-
 <div class="container">
     <dl class="row">
         <h2>Forecast for the selected city</h2>
@@ -20,37 +18,37 @@
 
         <div class="form-group row">
             <label asp-for="Name" class="col-sm-2 col-form-label"></label>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.City)
         </div>
 
         <div class="form-group row">
             <label asp-for="Lon" class="col-sm-2 col-form-label"></label>
-            @Html.DisplayFor(model => model.Lon)
+            @Html.DisplayFor(model => model.Lon) Longtitude
         </div>
 
         <div class="form-group row">
             <label asp-for="Lat" class="col-sm-2 col-form-label"></label>
-            @Html.DisplayFor(model => model.Lat)
+            @Html.DisplayFor(model => model.Lat) Latitude
         </div>
 
         <div class="form-group row">
             <label asp-for="Temperature" class="col-sm-2 col-form-label"></label>
-            @Html.DisplayFor(model => model.Temperature)
+            @Html.DisplayFor(model => model.Temperature) C
         </div>
 
         <div class="form-group row">
             <label asp-for="Feels_like" class="col-sm-2 col-form-label"></label>
-            @Html.DisplayFor(model => model.Feels_like)
+            @Html.DisplayFor(model => model.Feels_like) C
         </div>
 
         <div class="form-group row">
             <label asp-for="Pressure" class="col-sm-2 col-form-label"></label>
-            @Html.DisplayFor(model => model.Pressure)
+            @Html.DisplayFor(model => model.Pressure) millibar
         </div>
 
         <div class="form-group row">
             <label asp-for="Humidity" class="col-sm-2 col-form-label"></label>
-            @Html.DisplayFor(model => model.Humidity)
+            @Html.DisplayFor(model => model.Humidity) %
         </div>
 
         <div class="form-group row">
@@ -60,7 +58,7 @@
 
         <div class="form-group row">
             <label asp-for="Speed" class="col-sm-2 col-form-label"></label>
-            @Html.DisplayFor(model => model.Speed)
+            @Html.DisplayFor(model => model.Speed) m/s
         </div>
 
 
